--- a/TopDownShooterGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TopDownShooterGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -45,7 +45,7 @@ PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
 AdditionalLaunchParametersForMobile=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
@@ -119,12 +119,160 @@ SkeletalMeshActor.Cooking=True
 SkeletalMeshActor.Replication=True
 SkeletalMeshActor.Input=True
 SkeletalMeshActor.Actor=True
+BP_FPS_Character_C.Character=True
+BP_FPS_Character_C.Tick=True
+BP_FPS_Character_C.Camera=True
+BP_FPS_Character_C.Pawn=True
+BP_FPS_Character_C.Replication=True
+BP_FPS_Character_C.Rendering=True
+BP_FPS_Character_C.Collision=True
+BP_FPS_Character_C.Actor=True
+BP_FPS_Character_C.Input=True
+CustomMeshComponent.Variable=True
+CustomMeshComponent.TransformCommon=True
+CustomMeshComponent.Sockets=True
+CustomMeshComponent.Materials=True
+CustomMeshComponent.ComponentTick=True
+CustomMeshComponent.Lighting=True
+CustomMeshComponent.Navigation=True
+CustomMeshComponent.VirtualTexture=True
+CustomMeshComponent.Rendering=True
+CustomMeshComponent.Tags=True
+CustomMeshComponent.ComponentReplication=True
+CustomMeshComponent.Activation=True
+CustomMeshComponent.Cooking=True
+CustomMeshComponent.Events=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.ComponentTick=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+SkeletalMeshComponent.Materials=True
+BP_FPS_Character_C.TransformCommon=True
+BP_FPS_Character_C.Animation=True
+BP_FPS_Character_C.Mesh=True
+BP_FPS_Character_C.Clothing=True
+BP_FPS_Character_C.Physics=True
+BP_FPS_Character_C.MasterPoseComponent=True
+BP_FPS_Character_C.Lighting=True
+BP_FPS_Character_C.ClothingSimulation=True
+BP_FPS_Character_C.SkinWeights=True
+BP_FPS_Character_C.Navigation=True
+BP_FPS_Character_C.VirtualTexture=True
+BP_FPS_Character_C.Tags=True
+BP_FPS_Character_C.Activation=True
+BP_FPS_Character_C.Cooking=True
+BP_FPS_Character_C.Character Movement (General Settings)=True
+BP_FPS_Character_C.Character Movement: Walking=True
+BP_FPS_Character_C.Character Movement: Jumping / Falling=True
+BP_FPS_Character_C.Character Movement (Networking)=True
+BP_FPS_Character_C.Character Movement: Swimming=True
+BP_FPS_Character_C.Character Movement: Flying=True
+BP_FPS_Character_C.Character Movement: Custom Movement=True
+BP_FPS_Character_C.Character Movement (Rotation Settings)=True
+BP_FPS_Character_C.Character Movement: Physics Interaction=True
+BP_FPS_Character_C.Character Movement=True
+BP_FPS_Character_C.Character Movement: Avoidance=True
+BP_FPS_Character_C.RootMotion=True
+BP_FPS_Character_C.Character Movement: NavMesh Movement=True
+BP_FPS_Character_C.NavMovement=True
+BP_FPS_Character_C.Velocity=True
+BP_FPS_Character_C.PlanarMovement=True
+BP_FPS_Character_C.MovementComponent=True
+BP_FPS_Character_C.Shape=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+BP_FPS_Character_C.Materials=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueptrints/BP_FPS_Character.BP_FPS_Character;
 RecentlyPlaced=/Game/Characters/Marine/Marine.Marine;
 RecentlyPlaced=/Game/Characters/Enemy_Great_Spider/SK_Greater_Spider.SK_Greater_Spider;
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+
+[PathColor]
+/Game/Blueptrints=(R=0.000000,G=0.490346,B=1.000000,A=1.000000)
+
+[ContentBrowserRecent]
+MRUItem0=/Game/Blueptrints/BP_FPS_Character
 
